# dekoi

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md
demos/common/: allocator.c  allocator.h  application.c  application.h  bootstrap.c  bootstrap.h  common.h  io.c  io.h  logger.c  logger.h  renderer.c  renderer.h  window.c  window.h
demos/customallocator/: allocator.c  allocator.h  main.c
demos/customlogger/: logger.c  logger.h  main.c
demos/indexbuffer/: main.c
demos/triangle/: main.c
demos/vertexbuffer/: main.c
include/dekoi/: dekoi  logging  memory  renderer  rendering
include/dekoi/common/: allocator.h  common.h  logger.h  memory
include/dekoi/graphics/: graphics.h  renderer
playground/test/: application.c  application.h  io.c  io.h  logging.c  logging.h  main.c  renderer.c  renderer.h  rendering.c  rendering.h  test.h  window.c  window.h
shaders/: passthrough.vert  shader.vert.spv  triangle.vert
src/: dekoi.c  dekoi.h  logging.c  logging.h  memory.h  renderer.c  renderer.h  rendering.c  rendering.h
src/common/: allocator.h  common.c  common.h  logger.c  logger.h  memory.h
src/common/private/: allocator.c  allocator.h  assert.h  common.h  logger.c  logger.h  memory.c  memory.h
src/graphics/: graphics.h  renderer.c  renderer.h
src/internal/: assert.h  dekoi.h  io.c  io.h  memory.c  memory.h
src/private/: assert.h  dekoi.h  io.h  logging.c  logging.h  memory.c  memory.h
